<resources>
    <string name="app_name">Raven\'s Food</string>

    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="media">Media</string>
    <string name="blogs">Blogs</string>
    <string name="contact">Contact</string>
    <string name="contact_email">ravensfood@everykindred.com</string>
    <string name="useful_resources">Useful Resources</string>
    <string name="doug">Doug Allen</string>
    <string name="michael">Michael Barrett</string>
    <string name="sam">Sam Soleyn</string>

    <string name="urlHome">https://ravensfood.everykindred.com</string>
    <string name="urlBooks">https://ravensfood.everykindred.com/books</string>
    <string name="urlMedia">https://ravensfood.everykindred.com/media</string>
    <string name="urlBlogs">https://ravensfood.everykindred.com/node/</string>
    <string name="urlContact">https://ravensfood.everykindred.com/content/contact-us</string>
    <string name="urlDoug">http://www.douglasballen.com</string>
    <string name="urlMichael">http://citychurchla.com/city/home</string>
    <string name="urlSam">http://www.soleyn.com</string>
    <string name="urlBlogsNewest">http://ravensfood.everykindred.com/app/blogs_newest.php</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pref_play_next_teaching_title">Play Next Teaching</string>
    <string name="pref_play_next_teaching_summary">Always play next audio teaching in series</string>

    <string name="title_activity_blog">BlogActivity</string>
    <string name="title_activity_push_dialog">PushDialog</string>
    <string name="blogsubtitle">BlogSubtitle</string>
    <string name="blogtitle">BlogTitle</string>

    <string name="newBlogsMessage">A new blog is available</string>
    <string name="newBlogsMessagePlural">New blogs available</string>

    <string name="newBooksMessage">A new book is available</string>
    <string name="newBooksMessagePlural">New books available</string>


</resources>
