<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_books"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_nav_books"
            android:title="@string/books" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_nav_media"
            android:title="@string/media" />
        <item
            android:id="@+id/nav_blogs"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_nav_blog"
            android:title="@string/blogs" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_nav_contact"
            android:title="@string/contact" />
    </group>

    <item android:title="@string/useful_resources">
        <menu>
            <item
                android:id="@+id/nav_doug"
                android:icon="@drawable/ic_nav_resources"
                android:title="@string/doug" />
            <item
                android:id="@+id/nav_michael"
                android:icon="@drawable/ic_nav_resources"
                android:title="@string/michael" />
            <item
                android:id="@+id/nav_sam"
                android:icon="@drawable/ic_nav_resources"
                android:title="@string/sam" />
        </menu>
    </item>

</menu>
